# XGBoostLSS

./: .bumpversion.cfg  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  custom.css  googlecb1bb4af2ff47f72 (1).html  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  release_notes.md  search.html  setup.cfg  setup.py  sitemap.xml
.github/scripts/: install_osx_dependencies.sh
.github/workflows/: build.yaml  github-action.yml  mkdocs.yaml  publish-to-pypi.yml  python-package.yml  release.yaml  release.yml  unit-tests.yml
api/: index.html
datasets/simulated/: train_sim.csv
dgbm/: dgbm.md  index.html
distributions/: distributions.md  index.html
docs/: acknowledgments.md  api.md  dgbm.md  distributions.md  examples  index.md  sklearn_interface.md
docs/examples/: Dirichlet.ipynb  Gamma_Regression_BostonHousing.ipynb  Gamma_Regression_CaliforniaHousing.ipynb  GaussianMixture_Regression_CaliforniaHousing.ipynb  Gaussian_Regression.ipynb  How To Choose A Distribution.ipynb  How To Choose A Multivariate Distribution.ipynb  How_To_Select_A_Multivariate_Distribution.ipynb  How_To_Select_A_Univariate_Distribution.ipynb  LambertWGamma_Regression_CaliforniaHousing.ipynb  LambertW_Gaussian_Regression.ipynb  MVN (Cholesky).ipynb  MVN (Low-Rank).ipynb  MVN(Cholesky).ipynb  MVN_Cholesky.ipynb  MVN_LowRank.ipynb  MVT (Cholesky).ipynb  MVT_Cholesky.ipynb  Sklearn_Gaussian_Regression.ipynb  SplineFlow_Regression.ipynb  ZAGamma_simulation_example.ipynb  ZINB_example.ipynb  ZIPoisson_example.ipynb  boston_housing_example_Gamma.ipynb  simulation_example_Expectile.ipynb  simulation_example_Gaussian.ipynb  simulation_example_NegativeBinomial.ipynb  simulation_example_Poisson.ipynb  simulation_example_SplineFlow.ipynb  simulation_example_StudentT.ipynb
docs/examples.md/: How To Choose A Distribution.ipynb  MVN (Low-Rank).ipynb  ZINB_example.ipynb  ZIPoisson_example.ipynb  boston_housing_example_Gamma.ipynb  simulation_example_Expectile.ipynb  simulation_example_SplineFlow.ipynb
examples/: How To Choose A Distribution.ipynb  How To Choose A Multivariate Distribution.ipynb  MVN (Cholesky).ipynb  MVT (Cholesky).ipynb  ZAGA_simulation_example.ipynb  ZAGamma_simulation_example.ipynb  ZALN_simulation_example.ipynb  ZINB_example.ipynb  ZIP_example.ipynb  ZIPoisson_example.ipynb  boston_housing_example_Gamma.ipynb  simulation_example.ipynb  simulation_example_Expectile.ipynb  simulation_example_Gaussian.ipynb  simulation_example_Gaussian_AutoGrad.ipynb  simulation_example_NegativeBinomial.ipynb  simulation_example_Poisson.ipynb  simulation_example_SplineFlow.ipynb  simulation_example_StudentT.ipynb  sklearn_interface_demo.py
examples/Dirichlet_Regression/: Dirichlet_Regression.ipynb  index.html
examples/Expectile_Regression/: Expectile_Regression.ipynb  index.html
examples/Gamma_Regression_CaliforniaHousing/: Gamma_Regression_CaliforniaHousing.ipynb  index.html
examples/GaussianMixture_Regression_CaliforniaHousing/: GaussianMixture_Regression_CaliforniaHousing.ipynb  index.html
examples/Gaussian_Regression/: Gaussian_Regression.ipynb  index.html
examples/How_To_Select_A_Multivariate_Distribution/: How_To_Select_A_Multivariate_Distribution.ipynb  index.html
examples/How_To_Select_A_Univariate_Distribution/: How_To_Select_A_Univariate_Distribution.ipynb  index.html
examples/MVN_Cholesky/: index.html
examples/MVN_LowRank/: index.html
examples/MVT_Cholesky/: index.html
examples/SplineFlow_Regression/: SplineFlow_Regression.ipynb
examples/ZAGamma_Regression/: ZAGamma_Regression.ipynb  index.html
lss_xgboost/: model.py
lss_xgboost/distributions/: BCT.py  Beta.py  Expectile.py  Gamma.py  Gaussian.py  Gaussian_AutoGrad.py  NegativeBinomial.py  StudentT.py  __init__.py
overrides/: main.html
test/: test_utils.py  utils.py
test/test_distribution_utils/: test_calculate_start_values.py  test_compute_gradients_and_hessians.py  test_dist_select.py  test_draw_samples.py  test_get_params_loss.py  test_loss_fn_start_values.py  test_metric_fn.py  test_objective_fn.py  test_predict_dist.py  test_stabilize_derivative.py
test/test_distributions/: test_Beta.py  test_Cauchy.py  test_Dirichlet.py  test_Expectile.py  test_Gamma.py  test_Gaussian.py  test_Gumbel.py  test_Laplace.py  test_LogNormal.py  test_MVN.py  test_MVN_LoRa.py  test_MVT.py  test_NegativeBinomial.py  test_Poisson.py  test_StudentT.py  test_Weibull.py  test_ZABeta.py  test_ZAGamma.py  test_ZALN.py  test_ZINB.py  test_ZIPoisson.py  test_multivariate_distns.py  test_spline_flow.py  test_univariate_discrete_distns.py
test/test_flow_utils/: __init__.py  test_create_spline_flow.py  test_crps_score.py
tests/: conftest.py  test_sklearn_compat.py  test_template.py  test_xgboostlss.py  utils.py
tests/test_distribution_utils/: test_calculate_start_values.py  test_censored_utils.py  test_compute_gradients_and_hessians.py  test_crps_score.py  test_dist_select.py  test_draw_samples.py  test_get_params_loss.py  test_loss_fn_start_values.py  test_metric_fn.py  test_objective_fn.py  test_predict_dist.py  test_stabilize_derivative.py
tests/test_distributions/: test_Expectile.py  test_expectile.py  test_mixture.py  test_multivariate_distns.py  test_spline_flow.py  test_univariate_cont_distns.py  (+1 more)
xgboost_lss/: __init__.py  model.py
xgboostlss/: __init__.py  distributions.py  import_data.py  model.py  simulated_data.py  sklearn.py  sklearn_compat.py  utils.py
(+66 files in other folders)
