[metadata]
name = xgboostlss
url = https://github.com/awslabs/gluonts/
project_urls =
    Documentation = https://statmixedml.github.io/XGBoostLSS/
    Source Code = https://github.com/StatMixedML/XGBoostLSS
license = Apache License 2.0
license_file = LICENSE
author = Alexander März
author_email = alex.maerz@gmx.net
maintainer_email = alex.maerz@gmx.net
description = XGBoostLSS - An extension of XGBoost to probabilistic modelling.
long_description = file: README.md
long_description_content_type = text/markdown
